--- a/index.html
+++ b/index.html
@@ -165,22 +165,30 @@
           <h4 class="name">John Doe</h4>
           <span class="prof">Product Designer</span><br />
           <div class="social-links">
-            <div class="icon">              
-            <svg class="social-icons">
+
+
+            <a class="icon" href="https://www.instagram.com/" target="_blank"                                        title="instagram">
+            <svg class="social-icons" height="20" width="20">
               <use href="./images/icons.svg#icon-instagram-1"></use>
-          </svg></div>
-          <div class="icon">
-          <svg class="social-icons">
+          </svg></a>
+
+
+          <a class="icon"  href="https://www.twitter.com/" target="_blank"                                        title="twitter">
+          <svg class="social-icons" height="20" width="20">
             <use href="./images/icons.svg#icon-twitter-1"></use>
-        </svg></div>
-        <div class="icon">
-        <svg class="social-icons">
+        </svg></a>
+
+
+        <a class="icon" href="https://www.facebook.com/" target="_blank"                                        title="facebook">
+        <svg class="social-icons" height="20" width="20">
           <use href="./images/icons.svg#icon-facebook-1"></use>
-      </svg></div>
-      <div class="icon">
-      <svg class="social-icons">
+      </svg></a>
+
+
+      <a  class="icon" href="https://www.linkedin.com/" target="_blank"                                        title="linkedin">
+      <svg class="social-icons" height="20" width="20">
         <use href="./images/icons.svg#icon-linkedin-1"></use>
-    </svg></div>
+    </svg></a>
 
           </div>
         </figcaption></li>
